# Quadrotor

./: CMakeLists.txt  JLinkLog.txt  Project.uvguix.Amo  Project.uvguix.Lenovo  Project.uvoptx  README.md  STM32F401RE_FLASH.ld  log.md  os_cpu_c.c
Hardware/Inc/: GY86.h  Motor.h  OLED.h  Receiver.h  Serial.h
Hardware/Src/: GY86.c  Motor.c  OLED.c  Receiver.c  Serial.c
Libraries/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/: startup_stm32f401xx.s
Listings/: Project2023  Project2023.map  os_cpu_a.lst  startup_stm32f401xx.lst
Objects/: Project2023.build_log.htm  Project2023.hex  Project2023.htm  acc.d  anto.d  app_hooks.d  delay.d  gy86.d  hmc5883l.d  madgwick.d  main .d  misc.d  motor.d  mpu.d  myi2c.d  oled.d  os_core.d  os_cpu_c.d  os_dbg_r.d  os_flag.d  os_mbox.d  os_mem.d  os_mutex.d  os_q.d  os_sem.d  os_task.d  os_time.d  os_tmr.d  pid.d  pwm.d  quaternion.d  receiver.d  segger_rtt.d  segger_sysview.d  segger_sysview_config_ucosii.d  segger_sysview_ucosii.d  serial.d  stm32f4xx_adc.d  stm32f4xx_can.d  stm32f4xx_cec.d  (+40 more)
Ports/: os_core.h  os_cpu.h  os_cpu_a.asm
RTE/_Project_New/: RTE_Components.h
Software/Inc/: Acc.h  Anto.h  Madgwick.h  PID.h  PWM.h  Quaternion.h  USART.h
Software/Src/: Acc.c  Anto.c  PID.c  PWM.c  Quaternion.c  USART.c
System/Src/: Delay.c
Trace/Systemview_con/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Config_uCOSII.c
Trace/Systemview_src/: SEGGER_SYSVIEW_ConfDefaults.h
User/Src/: main .c  stm32f4xx_it.c
